<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragBackground">

    <Button
        android:id="@+id/clearButton"
        android:layout_width="79dp"
        android:layout_height="40dp"
        android:text="@string/ClearButton"
        app:layout_constraintBottom_toBottomOf="@+id/editTextStartUnit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editTextStartUnit"
        app:layout_constraintTop_toTopOf="@+id/editTextStartUnit" />

    <TextView
        android:id="@+id/categoryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoryLabel"
        android:textSize="22sp"
        android:textColor="@color/labelColour"
        app:layout_constraintBottom_toTopOf="@+id/textViewStartUnitLabel"
        app:layout_constraintStart_toStartOf="@+id/textViewStartUnitLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewConvertedUnitLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="converted unit placeholder"
        android:textColor="@color/labelColour"
        app:layout_constraintBottom_toTopOf="@+id/editTextConvertedUnit"
        app:layout_constraintStart_toStartOf="@+id/editTextStartUnit"
        app:layout_constraintTop_toBottomOf="@+id/editTextStartUnit" />

    <TextView
        android:id="@+id/textViewStartUnitLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="start unit placeholder"
        android:textColor="@color/labelColour"
        app:layout_constraintBottom_toTopOf="@+id/editTextStartUnit"
        app:layout_constraintStart_toStartOf="@+id/editTextStartUnit"
        app:layout_constraintTop_toBottomOf="@+id/categoryLabel" />

    <EditText
        android:id="@+id/editTextStartUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:maxLength="10"
        android:focusable="false"
        android:textSize="20sp"
        android:textColor="@color/labelColour"
        app:layout_constraintBottom_toTopOf="@+id/textViewConvertedUnitLabel"
        app:layout_constraintEnd_toStartOf="@+id/clearButton"
        app:layout_constraintStart_toStartOf="@+id/tableLayout"
        app:layout_constraintTop_toBottomOf="@+id/textViewStartUnitLabel" />

    <EditText
        android:id="@+id/editTextConvertedUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:focusable="false"
        android:textSize="20sp"
        android:textColor="@color/labelColour"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintStart_toStartOf="@+id/textViewConvertedUnitLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewConvertedUnitLabel" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="240dp"
        android:layout_height="283dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextConvertedUnit">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button7"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:text="@string/button7" />

            <Button
                android:id="@+id/button8"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:text="@string/button8" />

            <Button
                android:id="@+id/button9"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:text="@string/button9" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button4"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:text="@string/button4" />

            <Button
                android:id="@+id/button5"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:text="@string/button5" />

            <Button
                android:id="@+id/button6"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:text="@string/button6" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button1"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:text="@string/button1" />

            <Button
                android:id="@+id/button2"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:text="@string/button2" />

            <Button
                android:id="@+id/button3"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:text="@string/button3" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonDel"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:text="@string/buttonDel" />

            <Button
                android:id="@+id/button0"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:text="@string/button0" />

            <Button
                android:id="@+id/buttonDot"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:text="@string/buttonDot" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>